--- a/bank.html
+++ b/bank.html
@@ -21,7 +21,7 @@
      
             <div class="bg-yellow-500 p-8 rounded-xl">
                 <h4 class="text-2xl">withdraw</h4>
-                <h2 class="text-5xl">$00</h2>
+                <h2 class="text-5xl">$<span id="withdraw-total">00</span> </h2>
             </div>
             <div class="bg-violet-400 p-8 rounded-xl">
                 <h4 class="text-2xl">balance</h4>
@@ -39,8 +39,8 @@
                 </div>
                 <div class="bg-sky-400 p-8 rounded-xl">
                     <h4 class="text-2xl mb-4 text-white">Please withdraw</h4>
-                    <input class="w-9/12 block mb-2 px-3" placeholder=" $ Amount you want to Withdraw" id="withdrow-field">
-                    <button id="btn-deposit" class="bg-amber-600 px-8 py-2 text-white font-medium rounded-lg hover:bg-red-700" type="text">Withdraw</button>
+                    <input  class="w-9/12 block mb-2 px-3" placeholder=" $ Amount you want to Withdraw" id="withdrow-field">
+                    <button id="btn-withdraw" class="bg-amber-600 px-8 py-2 text-white font-medium rounded-lg hover:bg-red-700" type="text">Withdraw</button>
                 </div>
                </div> 
         </section>
